Fixed overflow

--- a/search-results-page/search-results.css
+++ b/search-results-page/search-results.css
@@ -6,7 +6,7 @@ body {
 	background-color: #212121;
 	margin: 0;
 	padding: 0;
-	color: rgb(252, 196, 45);
+	color: white;
 
 }
 
@@ -41,7 +41,7 @@ h1 {
 	position: absolute;
 	width: 100%;
 	height: 1px;
-	border-top: 1px solid rgb(252, 196, 45);
+	border-top: 1px solid white;
 	top: 65px;
 
 }
@@ -90,7 +90,7 @@ a {
 h2 {
 	font-size: 2.5rem;
 	/*! text-align: center; */
-	white-space: nowrap;
+	white-space: normal;
 
 	background-color: rgba(100, 100, 100, 0.6);
 	height: 100%;
@@ -121,7 +121,7 @@ h2 {
 	top: 23px;
 	width: 20%;
 	height: 25px;
-	border: 1px solid rgb(252, 196, 45);
+	border: 1px solid white;
 	border-bottom-left-radius: 25px;
 	border-top-left-radius: 25px;
 	border-right: none;
